# ChangeLog for net-mail/archivemail
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/archivemail/ChangeLog,v 1.18 2011/06/07 15:25:00 eras Exp $

*archivemail-0.8.2 (07 Jun 2011)

  07 Jun 2011; Eray Aslan <eras@gentoo.org> +archivemail-0.8.2.ebuild:
  Version bump

  12 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  archivemail-0.7.2-r1.ebuild, archivemail-0.8.0.ebuild:
  Use Python 2 (bug #315327).

*archivemail-0.8.0 (31 Aug 2010)

  31 Aug 2010; Tim Harder <radhermit@gentoo.org> +archivemail-0.8.0.ebuild:
  Version bump.

  09 Jul 2008; Torsten Veller <tove@gentoo.org>
  -files/archivemail-0.7.0-fpname.patch, -files/archivemail.1,
  -archivemail-0.6.1-r1.ebuild, -archivemail-0.7.2.ebuild:
  Cleaning

  09 Jul 2008; Christian Faulhammer <opfer@gentoo.org>
  archivemail-0.7.2-r1.ebuild:
  stable x86, bug 231160

  08 Jul 2008; Torsten Veller <tove@gentoo.org> -archivemail-0.6.2.ebuild,
  -archivemail-0.7.0.ebuild, -archivemail-0.7.0-r1.ebuild:
  Cleaning

*archivemail-0.7.2-r1 (08 Jul 2008)

  08 Jul 2008; Torsten Veller <tove@gentoo.org>
  +files/0.7.2-empty_maildir-r266.patch, +archivemail-0.7.2-r1.ebuild:
  Fixed crash when archiving an empty maildir with python 2.5.

*archivemail-0.7.2 (21 Nov 2007)

  21 Nov 2007; Torsten Veller <tove@gentoo.org> +archivemail-0.7.2.ebuild:
  Version bump

  08 Nov 2007; Grant Goodyear <g2boojum@gentoo.org> metadata.xml:
  -m removed myself as maintainer

  05 Jul 2007; Ali Polatel <hawking@gentoo.org> archivemail-0.6.1-r1.ebuild:
  use DOCS, mydoc is deprecated. Removed default doc names from DOCS

*archivemail-0.7.0-r1 (13 May 2007)

  13 May 2007; Torsten Veller <tove@gentoo.org>
  +files/archivemail-0.7.0-fpname.patch, +archivemail-0.7.0-r1.ebuild:
  Added support for python-2.5. Patch by Ali Polatel in bug #160811.

*archivemail-0.7.0 (11 Dec 2006)

  11 Dec 2006; Torsten Veller <tove@gentoo.org> +archivemail-0.7.0.ebuild: