@@ -1,29 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 0.7.2-empty_maildir-r266.patch 593 RMD160 23461245c502722ee28a0952450404406ce5ad08 SHA1 4ab3329527f6f6ea6a251d300440982f41330212 SHA256 f5a9a3dc0af87262d8fe43682aa664e8167aac10a1f1c9b0db410522d38e2118
 DIST archivemail-0.7.2.tar.gz 46070 RMD160 da85dff5114100d76f8f5ac19172d8a557801455 SHA1 0ff9b8991b04f09cf9536c45b6f9e05d2427a459 SHA256 0bd8072dc4f1f470fbd9797d599357bac24b5218031eaee29d2497f932e1b894
 DIST archivemail-0.8.0.tar.gz 56638 RMD160 28244775df602bcfa74a33a597fe5f3bc0124ad2 SHA1 ca0486fb5f8d3f2ee44909fc0a563dd7c4fc9f89 SHA256 d43ebf065445e514dac8bea232b8d274721fe4a5f1971cd3597a4ba400e4b117
 DIST archivemail-0.8.2.tar.gz 57913 RMD160 d9e1217e3a6b479c0165f5345a57a95a8de091b4 SHA1 f6bcfa19e4df0d2c13a01931f6377af8329c670e SHA256 4e99e9db292baa09c7bc0cc69d613a09dc3a29f4253f368e0c4995daac09c7e3
+DIST archivemail-0.9.0.tar.gz 63482 RMD160 7d524d7c3b4e089cb50a6c3637254931ccb06b72 SHA1 9b04604c97b12062af897c949f65303c54d7f55e SHA256 4b430e2fba6f24970a67bd61eef39d7eae8209c7bef001196b997be1916fc663
 EBUILD archivemail-0.7.2-r1.ebuild 986 RMD160 9e2447c360e868ce70c8bb056f3fe691f7499014 SHA1 ee640fef23b6a75fb76614ced00b29c71d0756ac SHA256 7f695c446e546ed5fb82b2cb993deb5b691c5a54293905856c54dcff1d1e5de1
 EBUILD archivemail-0.8.0.ebuild 1001 RMD160 62f62206334a69615172520d7a285df615d92899 SHA1 bb6f24bee69862f1fa195d65b4e2ab1a5d993ba4 SHA256 2d9875039c473633b30f8cad3def4669ce613598313331b06b08c587ab7dd745
 EBUILD archivemail-0.8.2.ebuild 997 RMD160 590e0c5b911ae1397d0c825387166fea923f29b1 SHA1 9e0eb61a89302eb50d4e4d7fc3f90c375fa480bd SHA256 586699d80156c2e8e60da6a10db76acf707b6b2bec67bb16d4e010b06dd77557
-MISC ChangeLog 2812 RMD160 7bd10bc95fa9b9a62d19d6e849c4eb213539331b SHA1 312dd2f46f92d2d7ae99046aaeb20e655c2c3235 SHA256 09791854aae09feb2e7090f8b5c9bf333685d97e5e03adf981aebb0579095958
+EBUILD archivemail-0.9.0.ebuild 980 RMD160 e4f39f7e3bc3a6677355c2c00e1224d4e993288e SHA1 470e8052007ea97f59e051adcf1613e2303af1bb SHA256 c25e4c3306b1b346b489ae051687cc56cbdefa2ff05f41b8f631c3851f79753d
+MISC ChangeLog 2944 RMD160 080d3cf56b890187459b9fbd0864c337e8482416 SHA1 51b11f308d41997db93065583284936012bee940 SHA256 4be172ce21bfb1f0b87f3faa80947109c459ef96d20138bb75db95f0fe484746
 MISC metadata.xml 161 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 SHA1 a1fecd2f7b169d621b88c6ccab9d758209fc8f19 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBCAAGBQJN7kLZAAoJEHfx8XVYajsf0e8QAJgzmKlJNT3TKHX/DCO92Ekk
-bZdmR9vT70CVsyhMUqpbOKGQVq6x/6tEhvcz/7Om0TB6AnYjm12gKNXl8xIQYMh1
-83f4APxTZ+aAhDrt7AQQ589pjrpSWAndIqWbv69OBYvqZiqS7CSqAa2ex+waMssq
-b8AMvbaLlWwKILwm3fViIPH0ZToDQJvF+ede13teSLtxdXv2pCGB24HEKtlQBE+V
-fZFwsK0GXcMKfYSvnf+cjqDh3tMUqxpN1EFSWIirH6vWSEc8TFy5idflsWztB/Yo
-akIVgo/XAWOoefK+dXRb1s2Sa7sTMguBvvz8Ur8WAlh7Dr+Z8AZPNPKjyQw4UfbX
-b0RVq0WOMWyOZnHyv+6gaUxeb8aFpaxIAKbkWJIqsEKCluHWyDqTxuYkKbLlYWCO
-Dag+mGF5sjViBR89t2umwC+1w8ZhsTt6c7X488Z5ingQuZ6yG7onCn2k1q+pP7RF
-yJVfuLNt9+h1f6b7gmljCSAjpEwI8jVP4Hx9EowzGkAr9IDyZEvF7NPhiTSHE8ql
-+WnCce+Vq4Mjs2yLw+clj5IJW9OxHHggjyh5cwo4ysSpjuxVtvLKAwJcc5ldj+Q9
-NGfENEfsTA/zXh4YLwHvzvdkjCWyl4JCg+uqjGH+wyh0bTSMYLI6esrRvRy+MVEq
-jndpvlm7pJVrSkUlSkq7
-=ISFL
+iQEcBAEBCgAGBQJOV3/JAAoJEEqz6FtPBkyjH6YH/2ej8XNIthbzLvk+Z9TIMncg
+u/4+UK14WLlOkqF7u7ZSESlBKywXbWt9Ti2Bt6Oocz7lSLi+VY7yyX6LjUmeM4FR
+M2H6aYridVEAoF/nGoZ55bXDYaLjqVtetXs78gSmBKvoKXgoF06tMmRdI+QKGX1n
+KsjGZ6ZTJmbIKXsFnXOvB6/nbx5xenc5w5h5MVkUGE0Vfsi8kaVvgSrsE6o9oS66
+4IuusnoB9j4wwaE9LC8d9v4GD40e3S9BjU1p2FlMSlADsD8qUVtIXBFcSVTUvN0u
+t6hXfXr1JAEBgLPF4AGfv2T7TvQvw1niPzhykVn4GJ3as8P6VE9BqvzAOHBvg5Y=
+=+SBI
 -----END PGP SIGNATURE-----
